--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="div-section2">
             <h2><strong>Liste des coachs</strong></h2>
-
+                <div class="coachs">
                 <div class="photo1">
                     <div class="sous1">
                         <img src="personna1.jpeg" alt="" class="homme2">
@@ -119,6 +119,9 @@
                     </div>
                 </div>
                 <div>
+            </div>
+
+                </div>
                 <h2 class="h2"><strong>Top Cours</strong></h2>
                 <div class="cour">
                 <div class="cours1">
@@ -175,7 +178,7 @@
                 </div>
                 </div>
               
-            </div>
+            
         </div>
             <br>
             <div class="div-section3">
